--- a/MIMIC-CXR-T/package.json
+++ b/MIMIC-CXR-T/package.json
@@ -13,18 +13,21 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
-    "react-diff-viewer": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
