--- a/MIMIC-CXR-T/package.json
+++ b/MIMIC-CXR-T/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^6.1.6",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
