--- a/MIMIC-CXR-T/package.json
+++ b/MIMIC-CXR-T/package.json
@@ -18,6 +18,7 @@
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.2.0",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
